@@ -360,13 +360,13 @@ void scan_for_terminated()
 
   if (mom_get_sample() == PBSE_NONE) 
     {
-    pjob = (job *)GET_NEXT(svr_alljobs);
+    pjob = (job *)GET_PRIOR(svr_alljobs);
 
     while (pjob != NULL) 
       {
       mom_set_use(pjob);
 
-      pjob = (job *)GET_NEXT(pjob->ji_alljobs);
+      pjob = (job *)GET_PRIOR(pjob->ji_alljobs);
       }
     }
 
@@ -431,7 +431,7 @@ void scan_for_terminated()
 
   while ((pid = waitpid(-1,&statloc,WNOHANG)) > 0) 
     {
-    pjob = (job *)GET_NEXT(svr_alljobs);
+    pjob = (job *)GET_PRIOR(svr_alljobs);
 
     while (pjob != NULL) 
       {
@@ -510,7 +510,7 @@ void scan_for_terminated()
         break;
         }
 
-      pjob = (job *)GET_NEXT(pjob->ji_alljobs);
+      pjob = (job *)GET_PRIOR(pjob->ji_alljobs);
       }  /* END while (pjob != NULL) */
 
     if (pjob == NULL) 
