@@ -36,6 +36,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature
       some comments also.
   b - reset ji_momhandle so we cannot have more than one pjob for obit_reply to find.
   e - change qdel to accept 'ALL' as well as 'all'
+  b - changed order of searching so we find most recent jobs first. Prevents
+      finding old leftover job when pids rollover. Also some CACHEOBITFAILURES
+      updates.
 
 2.3.0
   b - fixed a bug where TORQUE would ignore the "pbs_asyrunjob" API extension string when starting jobs in asynchronous mode
